--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>Filtrando elementos por categorias</title>
+	<title>NeoSTORE</title>
 
 	<link rel="stylesheet" href="css/estilos.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
@@ -42,12 +42,12 @@
 					<a href="#">Iphone 7</a>
 				</div>
 				<div class="product-item" category="ordenadores">
-					<img src="images/pc_hp.jpg" alt="" >
-					<a href="#">PC Hp</a>
+					<img src="images/pcintel.jpg" alt="" >
+					<a href="#">PC Intel</a>
 				</div>
 				<div class="product-item" category="ordenadores">
-					<img src="images/pc_lenovo.jpg" alt="" >
-					<a href="#">PC Lenovo</a>
+					<img src="images/pcryzen.jpg" alt="" >
+					<a href="#">PC Ryzen</a>
 				</div>
 				<div class="product-item" category="monitores">
 					<img src="images/monitor_asus.jpg" alt="" >
